--- a/index.html
+++ b/index.html
@@ -319,6 +319,40 @@
     </div>
     
     <!-- Export Modal -->
+    <div id="settingsModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="settingsModalTitle">
+        <div class="modal-overlay" data-close-modal></div>
+        <div class="modal-content modal-small">
+            <div class="modal-header">
+                <h3 id="settingsModalTitle" class="modal-title">Settings</h3>
+                <button class="modal-close" data-close-modal aria-label="Close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="settingsForm">
+                    <div class="form-group">
+                        <label for="settingsDarkMode" class="form-label">Theme</label>
+                        <select id="settingsDarkMode" class="form-input">
+                            <option value="auto">Auto (system)</option>
+                            <option value="light">Light</option>
+                            <option value="dark">Dark</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="checkbox-label">
+                            <input type="checkbox" id="settingsNotifications">
+                            <span>Enable Notifications</span>
+                        </label>
+                    </div>
+
+                    <div class="form-actions">
+                        <button type="button" class="btn btn-secondary" data-close-modal>Cancel</button>
+                        <button type="submit" class="btn btn-primary">Save Settings</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <div id="exportModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="exportModalTitle">
         <div class="modal-overlay" data-close-modal></div>
         <div class="modal-content modal-small">
