--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="description" content="LifeFlow - Minimalist GTD Task Planner">
     <meta name="theme-color" content="#3b82f6">
     <title>LifeFlow - GTD Task Planner</title>
@@ -11,8 +11,10 @@
     <link rel="manifest" href="manifest.json">
     
     <!-- Icons -->
+    <link rel="icon" type="image/png" href="icons/favicon.PNG">
     <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="icons/icon-512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon.PNG">
     
     <!-- Styles -->
     <link rel="stylesheet" href="style.css">
