--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     <link rel="manifest" href="manifest.json">
     
     <!-- Icons -->
+    <!-- Primary favicon (fallback) -->
     <link rel="icon" type="image/png" href="icons/favicon.PNG">
+    <link rel="shortcut icon" href="icons/favicon.PNG">
+    <!-- Web app icons -->
     <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="icons/icon-512.png">
+    <!-- iOS / Safari: prefer an apple-touch-icon. Use the provided favicon.PNG as the canonical apple-touch-icon. -->
     <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon.PNG">
+    <link rel="apple-touch-icon" href="icons/favicon.PNG">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="LifeFlow">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     
     <!-- Styles -->
     <link rel="stylesheet" href="style.css">
@@ -167,11 +175,19 @@
         <nav id="mobileNav" class="mobile-nav">
             <button class="mobile-nav-item active" data-view="inbox">
                 <span class="mobile-nav-icon">📥</span>
-                <span class="mobile-nav-label">Home</span>
+                <span class="mobile-nav-label">Inbox</span>
             </button>
             <button class="mobile-nav-item" data-view="today">
                 <span class="mobile-nav-icon">📅</span>
                 <span class="mobile-nav-label">Today</span>
+            </button>
+            <button class="mobile-nav-item" data-view="week">
+                <span class="mobile-nav-icon">📆</span>
+                <span class="mobile-nav-label">This Week</span>
+            </button>
+            <button class="mobile-nav-item" data-view="month">
+                <span class="mobile-nav-icon">🗓️</span>
+                <span class="mobile-nav-label">This Month</span>
             </button>
             <button class="mobile-nav-item" id="mobileAddBtn">
                 <span class="mobile-nav-icon mobile-add-icon">+</span>
